--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-# S.env
+.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -110,3 +110,4 @@ tmp/
 #VS Code
 .vscode
 
+.env
